--- a/3_Recurrent/4.1-Sequences.ipynb
+++ b/3_Recurrent/4.1-Sequences.ipynb
@@ -4,113 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sequences\n",
+    "# Credits\n",
     "\n",
-    "In this lab we will introduce data which has internal dependencies on previous relations in a sequence of data points, and how to model such data.\n",
-    "\n",
-    "Examples of data with a sequence dimension are stock prices, weather data, protein sequences, speech, text, and many more.\n",
-    "In previous labs we mainly considered data $x \\in \\mathrm{R}^d$, where $d$ is the feature space.\n",
-    "With time sequences our data can be represented as $x \\in \\mathrm{R}^{t \\, \\times \\, d}$, where $t$ is the sequence length. This emphasises sequence dependence and that the samples along the sequence are not independent and identically distributed (i.i.d.).\n",
-    "\n",
-    "In the following we will exemplify methods on text given the same challenges as presented in [learning when to skim and when to read](https://einstein.ai/research/learning-when-to-skim-and-when-to-read)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Text classification: Sentiment analysis\n",
-    "\n",
-    "In our first work on sequences we will classify sequences of text.\n",
-    "We will model functions as $\\mathrm{R}^{t \\, \\times \\, d} \\rightarrow \\mathrm{R}^c$, where $c$ is the amount of classes in the output.\n",
-    "\n",
-    "With text the challenge is how to represent a word as the feature $d$, as it is required to represent text with decimal numbers.\n",
-    "Currently, two popular approaches exist; one-hot encoding and embeddings."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## One-hot encoding over vocabulary\n",
-    "\n",
-    "One way to represent a fixed amount of words is by making a one-hot encoded vector, which consists of 0s in all cells with the exception of a single 1 in a cell used uniquely to identify each word.\n",
-    "\n",
-    "| vocabulary    | one-hot encoded vector   |\n",
-    "| ------------- |--------------------------|\n",
-    "| Copenhagen    | $= [0, 0, 1, \\ldots, 0]$ |\n",
-    "| Paris         | $= [1, 0, 0, \\ldots, 0]$ |\n",
-    "| Rome          | $= [0, 1, 0, \\ldots, 0]$ |\n",
-    "\n",
-    "Representing a large vocabulary with one-hot encodings often becomes inefficient because of the size of each sparse vector.\n",
-    "To overcome this challenge it is common practice to truncate the vocabulary to contain the $k$ most used words and represent the rest with a special symbol, $\\mathtt{UNK}$, to define unknown/unimportant words.\n",
-    "This often causes entities such as names to be represented with $\\mathtt{UNK}$.\n",
-    "\n",
-    "Consider the following text\n",
-    "> I love the corny jokes in Spielberg's new movie.\n",
-    "\n",
-    "where an example result would be similar to\n",
-    "> I love the corny jokes in $\\mathtt{UNK}$'s new movie."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Embeddings\n",
-    "\n",
-    "Word embeddings tries to tackle the intractability of one-hot encoded vectors, as $k$ is often in the range of 50k to 100k elements.\n",
-    "Furthermore, one-hot encoding of vectors assumes orthogonality between all words, which makes it inept to incorporate relationships between words, e.g. `ran` and `run` should be related, where e.g. `awkward` and `space` should be far apart in the vector space.\n",
-    "\n",
-    "An embedding is defined as $\\mathrm{R}^d \\rightarrow \\mathrm{R}^{d'}$, where $d' \\ll d$.\n",
-    "In practice this is often achieved by having a lookup table with $d'$-dimensional embeddings, similar to the following matrix operation $\\mathrm{R}^d \\cdot \\mathrm{R}^{d \\, \\times \\, d'}$.\n",
-    "\n",
-    "For visualizations and more intuition check out [learning when to skim and when to read](https://einstein.ai/research/learning-when-to-skim-and-when-to-read)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Bag of Words\n",
-    "\n",
-    "A simple way to model sequences of words is by averaging the word embeddings across the sequence dimension.\n",
-    "This gives us a vector which has a little information of each word, although completely disregarding the order of the words. Even though this might seem like a lossy approach to condense information it works surprisingly well.\n",
-    "\n",
-    "A bag of words model is represented as $\\mathrm{R}^{t \\, \\times \\, d'} \\rightarrow \\mathrm{R}^{d'}$, afterwards the representation can be used to do classification $\\mathrm{R}^{d'} \\rightarrow \\mathrm{R}^{c}$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Stanford sentiment treebank\n",
-    "\n",
-    "A great public dataset for sentiment analysis is the Stanford sentiment treebank (SST).\n",
-    "The SST provides not only the class (positive, negative) for a sentence, but also each of its grammatical subphrases.\n",
-    "We will not utilize any tree information.\n",
-    "The original SST constitutes five classes: *very positive*, *positive*, *neutral*, *negative* and *very negative*.\n",
-    "We consider the simpler task of binary classification where *very positive* is combined with *positive*, *very negative* is combined with *negative* and all *neutrals* are removed.\n",
-    "\n",
-    "## positive examples\n",
-    "\n",
-    "<div class=\"alert alert-info\">\n",
-    "  <ul>\n",
-    "    <li>The actors are fantastic</li>\n",
-    "    <li>A smart, witty follow-up.</li>\n",
-    "    <li>You'll probably love it.</li>\n",
-    "  </ul>\n",
-    "</div>\n",
-    "\n",
-    "## negative examples\n",
-    "\n",
-    "<div class=\"alert alert-danger\">\n",
-    "  <ul>\n",
-    "    <li>Unflinchingly bleak and desperate.</li>\n",
-    "    <li>An absurdist spider web.</li>\n",
-    "    <li>Who cares?</li>\n",
-    "  </ul>\n",
-    "</div>"
+    "This is heavily influenced by https://github.com/pytorch/tutorials."
    ]
   },
   {
@@ -119,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import stuff\n",
+    "# RUN THIS LINE ASAP - Download the dataset while you read the exercise\n",
+    "\n",
     "from pprint import pprint\n",
     "\n",
     "import numpy as np\n",
@@ -142,7 +39,129 @@
     "from bokeh.plotting import figure, ColumnDataSource\n",
     "from bokeh.models import HoverTool\n",
     "from bokeh.io import output_notebook, show, push_notebook\n",
-    "output_notebook()"
+    "output_notebook()\n",
+    "\n",
+    "\n",
+    "url = 'https://s3-us-west-1.amazonaws.com/fasttext-vectors/wiki.simple.vec'\n",
+    "TEXT.build_vocab(train_set, max_size=None, vectors=Vectors('wiki.simple.vec', url=url))\n",
+    "LABEL.build_vocab(train_set)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sequential Data\n",
+    "\n",
+    "In this lab we will introduce other ways of dealing with sequential data.\n",
+    "I.e. data which has internal dependencies on previous relations in a sequence of data points.\n",
+    "As an example we will train a neural network to classify sequences of text as having either positive or negative sentiment.\n",
+    "In the following we will exemplify methods on text given the same challenges as presented in [learning when to skim and when to read](https://einstein.ai/research/learning-when-to-skim-and-when-to-read).\n",
+    "\n",
+    "In this notebook we will show you \n",
+    "* Some different ways to represent text.\n",
+    "* Some PyTorch tools for working with text.\n",
+    "* How to create a simple bag of words model for sentiment analysis.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Representing Text\n",
+    "In previous labs we mainly considered data $x \\in \\mathrm{R}^d$, where $d$ is the feature space.\n",
+    "With time sequences our data can be represented as $x \\in \\mathrm{R}^{t \\, \\times \\, d}$, where $t$ is the sequence length. \n",
+    "This emphasises sequence dependence and that the samples along the sequence are not independent and identically distributed (i.i.d.).\n",
+    "We will model functions as $\\mathrm{R}^{t \\, \\times \\, d} \\rightarrow \\mathrm{R}^c$, where $c$ is the amount of classes in the output.\n",
+    "\n",
+    "\n",
+    "There are several ways to represent sequences.\n",
+    "With text the challenge is how to represent a word as the feature $d$, as it is required to represent text with decimal numbers.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### One-hot encoding over vocabulary\n",
+    "\n",
+    "One way to represent a fixed amount of words is by making a one-hot encoded vector, which consists of 0s in all cells with the exception of a single 1 in a cell used uniquely to identify each word.\n",
+    "\n",
+    "| vocabulary    | one-hot encoded vector   |\n",
+    "| ------------- |--------------------------|\n",
+    "| Paris         | $= [1, 0, 0, \\ldots, 0]$ |\n",
+    "| Rome          | $= [0, 1, 0, \\ldots, 0]$ |\n",
+    "| Copenhagen    | $= [0, 0, 1, \\ldots, 0]$ |\n",
+    "\n",
+    "Representing a large vocabulary with one-hot encodings often becomes inefficient because of the size of each sparse vector.\n",
+    "To overcome this challenge it is common practice to truncate the vocabulary to contain the $k$ most used words and represent the rest with a special symbol, $\\mathtt{UNK}$, to define unknown/unimportant words.\n",
+    "This often causes entities such as names to be represented with $\\mathtt{UNK}$.\n",
+    "\n",
+    "Consider the following text\n",
+    "> I love the corny jokes in Spielberg's new movie.\n",
+    "\n",
+    "where an example result would be similar to\n",
+    "> I love the corny jokes in $\\mathtt{UNK}$'s new movie."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Embeddings\n",
+    "\n",
+    "Word embeddings tries to tackle the intractability of one-hot encoded vectors, as $k$ is often in the range of 50k to 100k elements.\n",
+    "Furthermore, one-hot encoding of vectors assumes orthogonality between all words, which makes it inept to incorporate relationships between words, e.g. `ran` and `run` should be related, where e.g. `awkward` and `space` should be far apart in the vector space.\n",
+    "\n",
+    "An embedding is defined as $\\mathrm{R}^d \\rightarrow \\mathrm{R}^{d'}$, where $d' \\ll d$.\n",
+    "In practice this is often achieved by having a lookup table with $d'$-dimensional embeddings, similar to the following matrix operation $\\mathrm{R}^d \\cdot \\mathrm{R}^{d \\, \\times \\, d'}$.\n",
+    "\n",
+    "For visualizations and more intuition check out [learning when to skim and when to read](https://einstein.ai/research/learning-when-to-skim-and-when-to-read)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bag of Words\n",
+    "\n",
+    "A simple way to model sequences of words is by averaging the word embeddings across the sequence dimension.\n",
+    "This gives us a vector which has a little information of each word, although completely disregarding the order of the words. Even though this might seem like a lossy approach to condense information it works surprisingly well.\n",
+    "\n",
+    "A bag of words model is represented as $\\mathrm{R}^{t \\, \\times \\, d'} \\rightarrow \\mathrm{R}^{d'}$, afterwards the representation can be used to do classification $\\mathrm{R}^{d'} \\rightarrow \\mathrm{R}^{c}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stanford sentiment treebank\n",
+    "\n",
+    "A great public dataset for sentiment analysis is the Stanford sentiment treebank (SST).\n",
+    "The SST provides not only the class (positive, negative) for a sentence, but also each of its grammatical subphrases.\n",
+    "We will not utilize any tree information.\n",
+    "The original SST constitutes five classes: *very positive*, *positive*, *neutral*, *negative* and *very negative*.\n",
+    "We consider the simpler task of binary classification where *very positive* is combined with *positive*, *very negative* is combined with *negative* and all *neutrals* are removed.\n",
+    "\n",
+    "### positive examples\n",
+    "\n",
+    "<div class=\"alert alert-info\">\n",
+    "  <ul>\n",
+    "    <li>The actors are fantastic</li>\n",
+    "    <li>A smart, witty follow-up.</li>\n",
+    "    <li>You'll probably love it.</li>\n",
+    "  </ul>\n",
+    "</div>\n",
+    "\n",
+    "### negative examples\n",
+    "\n",
+    "<div class=\"alert alert-danger\">\n",
+    "  <ul>\n",
+    "    <li>Unflinchingly bleak and desperate.</li>\n",
+    "    <li>An absurdist spider web.</li>\n",
+    "    <li>Who cares?</li>\n",
+    "  </ul>\n",
+    "</div>"
    ]
   },
   {
@@ -309,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Build the model"
+    "# Simple Bag of Words Model"
    ]
   },
   {
@@ -324,7 +343,6 @@
     "num_classes = len(LABEL.vocab.itos)\n",
     "\n",
     "class Net(nn.Module):\n",
-    "\n",
     "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
     "        self.embeddings = nn.Embedding(num_embeddings, embedding_dim)\n",
@@ -332,12 +350,14 @@
     "        self.embeddings.weight.data.copy_(TEXT.vocab.vectors)\n",
     "        \n",
     "        # add hidden layers\n",
+    "        # YOUR CODE HERE!\n",
     "#         self.l_1 = Linear(in_features=embedding_dim,\n",
     "#                           out_features=30,\n",
     "#                           bias=True)\n",
     "#         self.l_2 = Linear(in_features=30,\n",
     "#                           out_features=30,\n",
     "#                           bias=True)\n",
+    "        \n",
     "        # output layer\n",
     "        self.l_out = Linear(in_features=embedding_dim,\n",
     "                            out_features=num_classes,\n",
@@ -347,12 +367,17 @@
     "        out = {}\n",
     "        # get embeddings\n",
     "        x = self.embeddings(x)\n",
+    "        \n",
     "        # mean embeddings, this is the bag of words trick\n",
     "        out['bow'] = x = torch.mean(x, dim=0)\n",
-    "        # apply layer\n",
-    "        #out['l1_activations'] = x = relu(self.l_1(x))\n",
-    "        #out['l2_activations'] = x = relu(self.l_2(x))\n",
-    "        # classify\n",
+    "        \n",
+    "        # add hidden layers\n",
+    "        # YOUR CODE HERE!\n",
+    "#         out['l1_activations'] = x = relu(self.l_1(x))\n",
+    "#         out['l2_activations'] = x = relu(self.l_2(x))\n",
+    "\n",
+    "\n",
+    "        # Softmax\n",
     "        out['out'] = softmax(self.l_out(x), dim=1)\n",
     "        return out\n",
     "\n",
@@ -399,7 +424,7 @@
     "            for i in range(batch.text.size()[1])]\n",
     "\n",
     "def get_labels(batch):\n",
-    "    \"\"\"    \n",
+    "    \"\"\"\n",
     "    Parameters\n",
     "    ----------\n",
     "    batch: torchtext.data.batch.Batch\n",
@@ -408,9 +433,7 @@
     "    -------\n",
     "    [str]\n",
     "    \"\"\"\n",
-    "    return [LABEL.vocab.itos[get_numpy(batch.label[i])] for i in range(len(batch.label))]\n",
-    "#construct_sentences(batch)\n",
-    "#get_labels(batch)"
+    "    return [LABEL.vocab.itos[get_numpy(batch.label[i])] for i in range(len(batch.label))]\n"
    ]
   },
   {
@@ -424,6 +447,7 @@
     "\n",
     "# index for each label\n",
     "colormap = {1: 'DodgerBlue', 2: 'FireBrick'}\n",
+    "\n",
     "# create a tmp source to be updated later\n",
     "validation_set_size = len(validation_set)\n",
     "source = ColumnDataSource(data={'x': np.random.randn(validation_set_size),\n",
@@ -431,6 +455,7 @@
     "                                'colors': ['green']*validation_set_size,\n",
     "                                'sentences': [\"tmp\"]*validation_set_size,\n",
     "                                'labels': [\"unk\"]*validation_set_size})\n",
+    "\n",
     "# instance to define hover logic in plot\n",
     "hover = HoverTool(tooltips=[(\"Sentence\", \"@sentences\"), (\"Label\", \"@labels\")])\n",
     "\n",
@@ -462,7 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run the bag of words model\n",
+    "## Train the bag of words model\n",
     "\n",
     "**Warning** this might take a while on CPU.\n",
     "Go get a cop of coffe, and enjoy the visualizations.\n",
@@ -517,7 +542,7 @@
     "        val_losses /= val_lengths\n",
     "        val_accs /= val_lengths\n",
     "        \n",
-    "        print(\"it: {} loss: {:.2f} accs: {:.2f}\".format(i, get_numpy(val_losses), get_numpy(val_accs)))\n",
+    "        print(\"valid, it: {} loss: {:.2f} accs: {:.2f}\\n\".format(i, get_numpy(val_losses), get_numpy(val_accs)))\n",
     "        update_plot(val_meta, 'bow', tsne_plot)\n",
     "        \n",
     "        net.train()\n",
@@ -547,9 +572,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignments\n",
-    "\n",
-    "## Assignment 1 - add hidden layer\n",
+    "# Assignment 1: add hidden layer\n",
     "\n",
     "- add one hidden layer to the bag of words (BoW) model\n",
     "  - plot the hidden layer's activations instead of the BoW representation\n",
