Restart & Clear Output

--- a/3_Recurrent/4.4-EXE-seq2seq-digits.ipynb
+++ b/3_Recurrent/4.4-EXE-seq2seq-digits.ipynb
@@ -22,7 +22,12 @@
     "10160378# \t one zero one zero six three seven eight\n",
     "```\n",
     "\n",
-    "The input for the Encoder RNN consists of words defining the number, whilst the output of such an encoding serves as input for the Decoder RNN that aims to generate generate a number. Let us define the space of characters and numbers to be learned with the networks:\n",
+    "The input for the Encoder RNN consists of words defining the number, whilst the output of such an encoding serves as input for the Decoder RNN that aims to generate generate a number. \n",
+    "The network architecture is as follows:\n",
+    "\n",
+    "![](./images/enc-dec.png)\n",
+    "\n",
+    "Let us define the space of characters and numbers to be learned with the networks:\n",
     "\n",
     "```\n",
     "Number of valid characters: 27\n",
@@ -35,17 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Device in use: cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from data_generator import generate\n",
     "import torch\n",
@@ -87,54 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generated batch length 3 from 3 iterations\r\n",
-      "input types: int32 int32 int32 int32 int32\r\n",
-      "Number of valid characters: 27\r\n",
-      "'0'=0,\t'1'=1,\t'2'=2,\t'3'=3,\t'4'=4,\t'5'=5,\t'6'=6,\t'7'=7,\t'8'=8,\t'9'=9,\t'#'=10,\t'v'=11,\t'r'=12,\t'o'=13,\t'n'=14,\t't'=15,\t'x'=16,\t'h'=17,\t'u'=18,\t' '=19,\t'e'=20,\t'f'=21,\t'w'=22,\t'z'=23,\t's'=24,\t'i'=25,\t'g'=26,\t\r\n",
-      "Stop/start character = #\r\n",
-      "\r\n",
-      "SAMPLE 0\r\n",
-      "TEXT INPUTS:\t\t\t two five zero\r\n",
-      "ENCODED INPUTS:\t\t\t [15 22 13 19 21 25 11 20 19 23 20 12 13  0]\r\n",
-      "INPUTS SEQUENCE LENGTH:\t 13\r\n",
-      "TEXT TARGETS INPUT:\t\t #250\r\n",
-      "TEXT TARGETS OUTPUT:\t 250#\r\n",
-      "ENCODED TARGETS INPUT:\t [10  2  5  0]\r\n",
-      "ENCODED TARGETS OUTPUT:\t [ 2  5  0 10]\r\n",
-      "TARGETS SEQUENCE LENGTH: 4\r\n",
-      "TARGETS MASK:\t\t\t [1. 1. 1. 1.]\r\n",
-      "\r\n",
-      "SAMPLE 1\r\n",
-      "TEXT INPUTS:\t\t\t four three six\r\n",
-      "ENCODED INPUTS:\t\t\t [21 13 18 12 19 15 17 12 20 20 19 24 25 16]\r\n",
-      "INPUTS SEQUENCE LENGTH:\t 14\r\n",
-      "TEXT TARGETS INPUT:\t\t #436\r\n",
-      "TEXT TARGETS OUTPUT:\t 436#\r\n",
-      "ENCODED TARGETS INPUT:\t [10  4  3  6]\r\n",
-      "ENCODED TARGETS OUTPUT:\t [ 4  3  6 10]\r\n",
-      "TARGETS SEQUENCE LENGTH: 4\r\n",
-      "TARGETS MASK:\t\t\t [1. 1. 1. 1.]\r\n",
-      "\r\n",
-      "SAMPLE 2\r\n",
-      "TEXT INPUTS:\t\t\t six zero\r\n",
-      "ENCODED INPUTS:\t\t\t [24 25 16 19 23 20 12 13  0  0  0  0  0  0]\r\n",
-      "INPUTS SEQUENCE LENGTH:\t 8\r\n",
-      "TEXT TARGETS INPUT:\t\t #60\r\n",
-      "TEXT TARGETS OUTPUT:\t 60#\r\n",
-      "ENCODED TARGETS INPUT:\t [10  6  0  0]\r\n",
-      "ENCODED TARGETS OUTPUT:\t [ 6  0 10  0]\r\n",
-      "TARGETS SEQUENCE LENGTH: 3\r\n",
-      "TARGETS MASK:\t\t\t [1. 1. 1. 0.]\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python3 ./data_generator.py"
    ]
@@ -150,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,8 +118,10 @@
     "    def forward(self, inputs, hidden):\n",
     "        # Input shape [batch, seq_in_len]z\n",
     "        inputs = inputs.long()\n",
+    "\n",
     "        # Embedded shape [batch, seq_in_len, embed]\n",
     "        embedded = self.embedding(inputs)\n",
+    "        \n",
     "        # Output shape [batch, seq_in_len, embed]\n",
     "        # Hidden shape [1, batch, embed], last hidden state of the GRU cell\n",
     "        # We will feed this last hidden state into the decoder\n",
@@ -181,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,224 +285,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generated batch length 8000 from 8000 iterations\n",
-      "Generated batch length 200 from 200 iterations\n",
-      "Epoch 1 [0/8000 (0%)]\tTraining loss: 2.4087 \tTraining accuracy: 19.4%\n",
-      "Epoch 1 [1600/8000 (20%)]\tTraining loss: 2.3628 \tTraining accuracy: 12.5%\n",
-      "Epoch 1 [3200/8000 (40%)]\tTraining loss: 2.3609 \tTraining accuracy: 20.8%\n",
-      "Epoch 1 [4800/8000 (60%)]\tTraining loss: 2.3759 \tTraining accuracy: 15.3%\n",
-      "Epoch 1 [6400/8000 (80%)]\tTraining loss: 2.4134 \tTraining accuracy: 18.1%\n",
-      "\n",
-      "Test set: Average loss: 2.3914 \tAccuracy: 15.111%\n",
-      "\n",
-      "Examples: prediction | input\n",
-      "468006810 \t zero four three one five three six\n",
-      "468006810 \t two one zero six three four three\n",
-      "468006810 \t one seven one five three\n",
-      "468010810 \t seven five zero five one nine four two\n",
-      "468006810 \t six seven zero four two zero three\n",
-      "468006810 \t three three five two three five six\n",
-      "468006810 \t one zero zero two two eight\n",
-      "468010810 \t four five nine one eight seven four four\n",
-      "468006810 \t five three one seven one\n",
-      "468006810 \t zero two eight nine two\n",
-      "\n",
-      "Epoch 2 [0/8000 (0%)]\tTraining loss: 2.4087 \tTraining accuracy: 19.4%\n",
-      "Epoch 2 [1600/8000 (20%)]\tTraining loss: 2.3628 \tTraining accuracy: 12.5%\n",
-      "Epoch 2 [3200/8000 (40%)]\tTraining loss: 2.3609 \tTraining accuracy: 20.8%\n",
-      "Epoch 2 [4800/8000 (60%)]\tTraining loss: 2.3759 \tTraining accuracy: 15.3%\n",
-      "Epoch 2 [6400/8000 (80%)]\tTraining loss: 2.4134 \tTraining accuracy: 18.1%\n",
-      "\n",
-      "Test set: Average loss: 2.3914 \tAccuracy: 15.111%\n",
-      "\n",
-      "Examples: prediction | input\n",
-      "468006810 \t zero four three one five three six\n",
-      "468006810 \t two one zero six three four three\n",
-      "468006810 \t one seven one five three\n",
-      "468010810 \t seven five zero five one nine four two\n",
-      "468006810 \t six seven zero four two zero three\n",
-      "468006810 \t three three five two three five six\n",
-      "468006810 \t one zero zero two two eight\n",
-      "468010810 \t four five nine one eight seven four four\n",
-      "468006810 \t five three one seven one\n",
-      "468006810 \t zero two eight nine two\n",
-      "\n",
-      "Epoch 3 [0/8000 (0%)]\tTraining loss: 2.4087 \tTraining accuracy: 19.4%\n",
-      "Epoch 3 [1600/8000 (20%)]\tTraining loss: 2.3628 \tTraining accuracy: 12.5%\n",
-      "Epoch 3 [3200/8000 (40%)]\tTraining loss: 2.3609 \tTraining accuracy: 20.8%\n",
-      "Epoch 3 [4800/8000 (60%)]\tTraining loss: 2.3759 \tTraining accuracy: 15.3%\n",
-      "Epoch 3 [6400/8000 (80%)]\tTraining loss: 2.4134 \tTraining accuracy: 18.1%\n",
-      "\n",
-      "Test set: Average loss: 2.3914 \tAccuracy: 15.111%\n",
-      "\n",
-      "Examples: prediction | input\n",
-      "468006810 \t zero four three one five three six\n",
-      "468006810 \t two one zero six three four three\n",
-      "468006810 \t one seven one five three\n",
-      "468010810 \t seven five zero five one nine four two\n",
-      "468006810 \t six seven zero four two zero three\n",
-      "468006810 \t three three five two three five six\n",
-      "468006810 \t one zero zero two two eight\n",
-      "468010810 \t four five nine one eight seven four four\n",
-      "468006810 \t five three one seven one\n",
-      "468006810 \t zero two eight nine two\n",
-      "\n",
-      "Epoch 4 [0/8000 (0%)]\tTraining loss: 2.4087 \tTraining accuracy: 19.4%\n",
-      "Epoch 4 [1600/8000 (20%)]\tTraining loss: 2.3628 \tTraining accuracy: 12.5%\n",
-      "Epoch 4 [3200/8000 (40%)]\tTraining loss: 2.3609 \tTraining accuracy: 20.8%\n",
-      "Epoch 4 [4800/8000 (60%)]\tTraining loss: 2.3759 \tTraining accuracy: 15.3%\n",
-      "Epoch 4 [6400/8000 (80%)]\tTraining loss: 2.4134 \tTraining accuracy: 18.1%\n",
-      "\n",
-      "Test set: Average loss: 2.3914 \tAccuracy: 15.111%\n",
-      "\n",
-      "Examples: prediction | input\n",
-      "468006810 \t zero four three one five three six\n",
-      "468006810 \t two one zero six three four three\n",
-      "468006810 \t one seven one five three\n",
-      "468010810 \t seven five zero five one nine four two\n",
-      "468006810 \t six seven zero four two zero three\n",
-      "468006810 \t three three five two three five six\n",
-      "468006810 \t one zero zero two two eight\n",
-      "468010810 \t four five nine one eight seven four four\n",
-      "468006810 \t five three one seven one\n",
-      "468006810 \t zero two eight nine two\n",
-      "\n",
-      "Epoch 5 [0/8000 (0%)]\tTraining loss: 2.4087 \tTraining accuracy: 19.4%\n",
-      "Epoch 5 [1600/8000 (20%)]\tTraining loss: 2.3628 \tTraining accuracy: 12.5%\n",
-      "Epoch 5 [3200/8000 (40%)]\tTraining loss: 2.3609 \tTraining accuracy: 20.8%\n",
-      "Epoch 5 [4800/8000 (60%)]\tTraining loss: 2.3759 \tTraining accuracy: 15.3%\n",
-      "Epoch 5 [6400/8000 (80%)]\tTraining loss: 2.4134 \tTraining accuracy: 18.1%\n",
-      "\n",
-      "Test set: Average loss: 2.3914 \tAccuracy: 15.111%\n",
-      "\n",
-      "Examples: prediction | input\n",
-      "468006810 \t zero four three one five three six\n",
-      "468006810 \t two one zero six three four three\n",
-      "468006810 \t one seven one five three\n",
-      "468010810 \t seven five zero five one nine four two\n",
-      "468006810 \t six seven zero four two zero three\n",
-      "468006810 \t three three five two three five six\n",
-      "468006810 \t one zero zero two two eight\n",
-      "468010810 \t four five nine one eight seven four four\n",
-      "468006810 \t five three one seven one\n",
-      "468006810 \t zero two eight nine two\n",
-      "\n",
-      "Epoch 6 [0/8000 (0%)]\tTraining loss: 2.4087 \tTraining accuracy: 19.4%\n",
-      "Epoch 6 [1600/8000 (20%)]\tTraining loss: 2.3628 \tTraining accuracy: 12.5%\n",
-      "Epoch 6 [3200/8000 (40%)]\tTraining loss: 2.3609 \tTraining accuracy: 20.8%\n",
-      "Epoch 6 [4800/8000 (60%)]\tTraining loss: 2.3759 \tTraining accuracy: 15.3%\n",
-      "Epoch 6 [6400/8000 (80%)]\tTraining loss: 2.4134 \tTraining accuracy: 18.1%\n",
-      "\n",
-      "Test set: Average loss: 2.3914 \tAccuracy: 15.111%\n",
-      "\n",
-      "Examples: prediction | input\n",
-      "468006810 \t zero four three one five three six\n",
-      "468006810 \t two one zero six three four three\n",
-      "468006810 \t one seven one five three\n",
-      "468010810 \t seven five zero five one nine four two\n",
-      "468006810 \t six seven zero four two zero three\n",
-      "468006810 \t three three five two three five six\n",
-      "468006810 \t one zero zero two two eight\n",
-      "468010810 \t four five nine one eight seven four four\n",
-      "468006810 \t five three one seven one\n",
-      "468006810 \t zero two eight nine two\n",
-      "\n",
-      "Epoch 7 [0/8000 (0%)]\tTraining loss: 2.4087 \tTraining accuracy: 19.4%\n",
-      "Epoch 7 [1600/8000 (20%)]\tTraining loss: 2.3628 \tTraining accuracy: 12.5%\n",
-      "Epoch 7 [3200/8000 (40%)]\tTraining loss: 2.3609 \tTraining accuracy: 20.8%\n",
-      "Epoch 7 [4800/8000 (60%)]\tTraining loss: 2.3758 \tTraining accuracy: 15.3%\n",
-      "Epoch 7 [6400/8000 (80%)]\tTraining loss: 2.4134 \tTraining accuracy: 18.1%\n",
-      "\n",
-      "Test set: Average loss: 2.3914 \tAccuracy: 15.111%\n",
-      "\n",
-      "Examples: prediction | input\n",
-      "468006810 \t zero four three one five three six\n",
-      "468006810 \t two one zero six three four three\n",
-      "468006810 \t one seven one five three\n",
-      "468010810 \t seven five zero five one nine four two\n",
-      "468006810 \t six seven zero four two zero three\n",
-      "468006810 \t three three five two three five six\n",
-      "468006810 \t one zero zero two two eight\n",
-      "468010810 \t four five nine one eight seven four four\n",
-      "468006810 \t five three one seven one\n",
-      "468006810 \t zero two eight nine two\n",
-      "\n",
-      "Epoch 8 [0/8000 (0%)]\tTraining loss: 2.4087 \tTraining accuracy: 19.4%\n",
-      "Epoch 8 [1600/8000 (20%)]\tTraining loss: 2.3628 \tTraining accuracy: 12.5%\n",
-      "Epoch 8 [3200/8000 (40%)]\tTraining loss: 2.3609 \tTraining accuracy: 20.8%\n",
-      "Epoch 8 [4800/8000 (60%)]\tTraining loss: 2.3758 \tTraining accuracy: 15.3%\n",
-      "Epoch 8 [6400/8000 (80%)]\tTraining loss: 2.4134 \tTraining accuracy: 18.1%\n",
-      "\n",
-      "Test set: Average loss: 2.3914 \tAccuracy: 15.111%\n",
-      "\n",
-      "Examples: prediction | input\n",
-      "468006810 \t zero four three one five three six\n",
-      "468006810 \t two one zero six three four three\n",
-      "468006810 \t one seven one five three\n",
-      "468010810 \t seven five zero five one nine four two\n",
-      "468006810 \t six seven zero four two zero three\n",
-      "468006810 \t three three five two three five six\n",
-      "468006810 \t one zero zero two two eight\n",
-      "468010810 \t four five nine one eight seven four four\n",
-      "468006810 \t five three one seven one\n",
-      "468006810 \t zero two eight nine two\n",
-      "\n",
-      "Epoch 9 [0/8000 (0%)]\tTraining loss: 2.4087 \tTraining accuracy: 19.4%\n",
-      "Epoch 9 [1600/8000 (20%)]\tTraining loss: 2.3628 \tTraining accuracy: 12.5%\n",
-      "Epoch 9 [3200/8000 (40%)]\tTraining loss: 2.3609 \tTraining accuracy: 20.8%\n",
-      "Epoch 9 [4800/8000 (60%)]\tTraining loss: 2.3759 \tTraining accuracy: 15.3%\n",
-      "Epoch 9 [6400/8000 (80%)]\tTraining loss: 2.4134 \tTraining accuracy: 18.1%\n",
-      "\n",
-      "Test set: Average loss: 2.3914 \tAccuracy: 15.111%\n",
-      "\n",
-      "Examples: prediction | input\n",
-      "468006810 \t zero four three one five three six\n",
-      "468006810 \t two one zero six three four three\n",
-      "468006810 \t one seven one five three\n",
-      "468010810 \t seven five zero five one nine four two\n",
-      "468006810 \t six seven zero four two zero three\n",
-      "468006810 \t three three five two three five six\n",
-      "468006810 \t one zero zero two two eight\n",
-      "468010810 \t four five nine one eight seven four four\n",
-      "468006810 \t five three one seven one\n",
-      "468006810 \t zero two eight nine two\n",
-      "\n",
-      "Epoch 10 [0/8000 (0%)]\tTraining loss: 2.4087 \tTraining accuracy: 19.4%\n",
-      "Epoch 10 [1600/8000 (20%)]\tTraining loss: 2.3628 \tTraining accuracy: 12.5%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 10 [3200/8000 (40%)]\tTraining loss: 2.3609 \tTraining accuracy: 20.8%\n",
-      "Epoch 10 [4800/8000 (60%)]\tTraining loss: 2.3759 \tTraining accuracy: 15.3%\n",
-      "Epoch 10 [6400/8000 (80%)]\tTraining loss: 2.4134 \tTraining accuracy: 18.1%\n",
-      "\n",
-      "Test set: Average loss: 2.3914 \tAccuracy: 15.111%\n",
-      "\n",
-      "Examples: prediction | input\n",
-      "468006810 \t zero four three one five three six\n",
-      "468006810 \t two one zero six three four three\n",
-      "468006810 \t one seven one five three\n",
-      "468010810 \t seven five zero five one nine four two\n",
-      "468006810 \t six seven zero four two zero three\n",
-      "468006810 \t three three five two three five six\n",
-      "468006810 \t one zero zero two two eight\n",
-      "468010810 \t four five nine one eight seven four four\n",
-      "468006810 \t five three one seven one\n",
-      "468006810 \t zero two eight nine two\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "encoder = EncoderRNN(NUM_INPUTS, NUM_UNITS_ENC).to(device)\n",
     "decoder = DecoderRNN(NUM_UNITS_DEC, NUM_OUTPUTS).to(device)\n",
@@ -605,13 +344,6 @@
     "2. These networks implement the GRU-gates. Implement an alternative control utilising a memory mechanism (Hint: LSTM). What do you experience? \n",
     "3. There are some parameters in the model that may be optimized further, what could they be? Achieve >90% validation error"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
