--- a/3_Recurrent/4.4-EXE-seq2seq-digits.ipynb
+++ b/3_Recurrent/4.4-EXE-seq2seq-digits.ipynb
@@ -353,7 +353,7 @@
     "\n",
     "1. Implement missing code for the network in the *train* function. Your validation loss is expected to be <20% at this point.\n",
     "2. These networks implement the GRU-gates. Implement an alternative control utilising a memory mechanism (Hint: LSTM). What do you experience? \n",
-    "3. There are some parameters in the model that may be optimized further, what could they be? Achieve >90% validation error"
+    "3. There are some parameters in the model that may be optimized further, what could they be? Achieve >90% validation accuracy"
    ]
   }
  ],
