--- a/3_Recurrent/4.1-Sequencial-Data.ipynb
+++ b/3_Recurrent/4.1-Sequencial-Data.ipynb
@@ -75,7 +75,6 @@
     "# Sequential Data\n",
     "\n",
     "In this lab we will introduce other ways of dealing with sequential data.\n",
-    "I.e. data which has internal dependencies on previous relations in a sequence of data points.\n",
     "As an example we will train a neural network to classify sequences of text as having either positive or negative sentiment.\n",
     "In the following we will exemplify methods on text given the same challenges as presented in [learning when to skim and when to read](https://einstein.ai/research/learning-when-to-skim-and-when-to-read).\n",
     "\n",
@@ -90,14 +89,14 @@
    "metadata": {},
    "source": [
     "## Representing Text\n",
-    "In previous labs we mainly considered data $x \\in \\mathrm{R}^d$, where $d$ is the feature space.\n",
+    "In previous labs we mainly considered data $x \\in \\mathrm{R}^d$, where $d$ is the feature space dimension.\n",
     "With time sequences our data can be represented as $x \\in \\mathrm{R}^{t \\, \\times \\, d}$, where $t$ is the sequence length. \n",
     "This emphasises sequence dependence and that the samples along the sequence are not independent and identically distributed (i.i.d.).\n",
     "We will model functions as $\\mathrm{R}^{t \\, \\times \\, d} \\rightarrow \\mathrm{R}^c$, where $c$ is the amount of classes in the output.\n",
     "\n",
     "\n",
     "There are several ways to represent sequences.\n",
-    "With text the challenge is how to represent a word as the feature $d$, as it is required to represent text with decimal numbers.\n"
+    "With text the challenge is how to represent a word as the feature vector in $d$ dimensions, as it is required to represent text with decimal numbers.\n"
    ]
   },
   {
@@ -135,7 +134,7 @@
     "Furthermore, one-hot encoding of vectors assumes orthogonality between all words, which makes it inept to incorporate relationships between words, e.g. `ran` and `run` should be related, where e.g. `awkward` and `space` should be far apart in the vector space.\n",
     "\n",
     "An embedding is defined as $\\mathrm{R}^d \\rightarrow \\mathrm{R}^{d'}$, where $d' \\ll d$.\n",
-    "In practice this is often achieved by having a lookup table with $d'$-dimensional embeddings, similar to the following matrix operation $\\mathrm{R}^d \\cdot \\mathrm{R}^{d \\, \\times \\, d'}$.\n",
+    "In practice this is often achieved by having a lookup table with $d'$-dimensional embeddings.\n",
     "\n",
     "For visualizations and more intuition check out [learning when to skim and when to read](https://einstein.ai/research/learning-when-to-skim-and-when-to-read)."
    ]
@@ -147,7 +146,7 @@
     "### Bag of Words\n",
     "\n",
     "A simple way to model sequences of words is by averaging the word embeddings across the sequence dimension.\n",
-    "This gives us a vector which has a little information of each word, although completely disregarding the order of the words. Even though this might seem like a lossy approach to condense information it works surprisingly well.\n",
+    "This gives us a vector which contains information about each word, although completely disregarding the order of the words. Even though this might seem like a lossy approach to condense information it works surprisingly well.\n",
     "\n",
     "A bag of words model is represented as $\\mathrm{R}^{t \\, \\times \\, d'} \\rightarrow \\mathrm{R}^{d'}$, afterwards the representation can be used to do classification $\\mathrm{R}^{d'} \\rightarrow \\mathrm{R}^{c}$."
    ]
